tests/strict_mode/strict_mode.exp
Error ----------------------------------------------------------------------------------------------------- test.js:3:15

Importing a type from an untyped module makes it `any` and is not safe! Did you mean to add `// @flow` to the top of
`./import`? (`untyped-type-import`)

   3| import type { T } from './import';
                    ^


Error ------------------------------------------------------------------------------------------------------ test.js:8:3

Cannot reassign constant `x` [1].

   test.js:8:3
   8|   x = 1;
        ^

References:
   test.js:7:12
   7| function f(x) {
                 ^ [1]



Found 2 errors
